fixed overflow (made profile pic invis again tho)

--- a/css/Quiet.css
+++ b/css/Quiet.css
@@ -4412,9 +4412,6 @@ code{background-color: #19191b!important;background-image: linear-gradient(#1212
     border-bottom: solid 2px var(--main-color);
     height: 46px;
 }
-.layer > .container-2OU7Cz > .base-3AoPqv {
-    overflow:visible;
-}
 .chat .content form {
     background-color: #19191b;
 }
